# urlopen

./: .gitignore  .gitmodules  45dd6dc2-09da-45da-9302-e1f00abb24b1.desktop  CMakeLists.txt  README.md  main.cpp  package.sh  setup.sh  twitter.com.url  urlfile.cpp  urlfile.hpp  urlopen.1  urlopen.desktop
img/: README.txt  application-x-mswinurl.odg  color.txt
